--- a/sportsportal/portal/templates/home.html
+++ b/sportsportal/portal/templates/home.html
@@ -82,8 +82,8 @@
         </ul>
     </nav>
 </header>
-    <main class="pt-32 px-5">
-        <section id="home" class="flex flex-col items-center text-center py-32 px-4 bg-black/50 text-white mt-[0px] backdrop-blur-lg rounded-xl shadow-lg">
+    <main class="pt-10 px-5">
+        <section id="home" class="flex flex-col items-center text-center py-32 px-4 bg-black/50 text-white mt- backdrop-blur-lg rounded-xl shadow-lg">
           <div>
             <h1 class="text-[2.8rem] md:text-[4.5rem] font-serif text-green-400 mb-3">JU CSE Sports Portal</h1>
             <h2 class="mt-4 text-lg md:text-xl font-semibold text-red-600 bg-white border-2 border-red-600 rounded-lg inline-block py-3 px-6">OngoingTournament</h2>
@@ -98,7 +98,13 @@
     
           <!-- Team Counter -->
           <div id="team-counter" class="text-[1.5rem] md:text-[2rem] text-yellow-400 bg-black/70 py-3 px-6 rounded-lg mt-8 text-center w-fit bounceIn">
-            <h4>Teams Registered: <span id="team-count">34</span></h4>
+            <h2>Registered Teams </h2>
+            <ul>
+                {% for game in games %}
+                <li>{{ game.name }}: {{ game.team_count }} teams</li>
+                {% endfor %}
+            </ul>
+            
           </div>
         </section>
       </main>
